--- a/rubymobile.css
+++ b/rubymobile.css
@@ -187,13 +187,12 @@ font-weight: initials;
   and (max-device-width: 3000px)
   and (-webkit-min-device-pixel-ratio: 2) {
 
-#bg, #bg2, #bg3 {
-	x-index: -5;
-  	y-index: -5;
-  	  z-index: -5;
+#bg, #bg2, #bg3 { overscroll-behavior-x: 0.001;
+    x-index: -0.003;
+    y-index: -0.003;
+    z-index: -0.003;
 	position:fixed;
 	    padding:0 0 0 0;
-
 }
    
 #menu-right
