--- a/rubymobile.css
+++ b/rubymobile.css
@@ -96,9 +96,9 @@ font-weight: initials;
   and (-webkit-min-device-pixel-ratio: 3) {
 /*here is for task_reminder*/　}
 
-/*albert = short work short life *//* much str *//*one day liscense*/
+/*albert = short work long life *//* much str *//*one day*/
 /*similarity*/
-/*1 km ~> walk not = work shortly*//*a day*/
+/*1 km -------------------------> walk, not  == work shortly*//*a day*/
 
 /*Cover hearts*/ /*t_ink*/ /*tinkle wrincle*/
 /*e_sim for Shene/senorita in shi*/ /*in_shinai*/ /*initialized_itineraryz*/ /*/
