--- a/rubymobile.css
+++ b/rubymobile.css
@@ -88,7 +88,7 @@ font-weight: initials;
 /*here is for insta*/
 }
 
-/* Task TRUST CASHss credit */
+/* Task TRUST credit */
 /*ToDo APP captain_cook_todo*/
 @media only screen 
   and (max-device-width: 1080px) 
@@ -96,14 +96,14 @@ font-weight: initials;
   and (-webkit-min-device-pixel-ratio: 3) {
 /*here is for task_reminder*/　}
 
-/*albert = short work short life *//* much str *//*one day liscense*/
+/*albert = short work long life *//* much str *//*one day*/
 /*similarity*/
-/*1 km ~> walk not = work shortly*//*a day*/
+/*1 km --------------------------> walk not == work shortly*//*a day*/
 
 /*Cover hearts*/ /*t_ink*/ /*tinkle wrincle*/
-/*e_sim for Shene/senorita in shi*/ /*in_shinai*/ /*initialized_itineraryz*/ /*/
+/*in_shinai*/ /*initialized_itineraryz*/ /*/
 /**/
-/*here is for mini,nano_schim,e_schim*/
+/*for mini,nano_schim,e_schim*/
 @media only screen 
   and (min-device-width: 30px) 
   and (min-device-hight: 50px) 
